--- a/404.html
+++ b/404.html
@@ -15,7 +15,8 @@
 
 <body id="trito">
  <h1>Erreur 404</h1>
- <p>oupss, une erreur est survenue, impossible de trounver votre page</p>
+ <p><img src="app/Public/front/img/crash21.jpg" alt="crash vaisseau de livraison de pizzas"></p>
+ <p>Oupss, une erreur est survenue, impossible de trouver votre page</p>
  <p><a href="index.php">retour à la page d'acceuil</a></p>
 </body>
 
