--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="app/Public/front/css/style.css">
 </head>
 
-<body id="trito">
+<body id="error">
  <h1>Erreur 404</h1>
  <p><img src="app/Public/front/img/crash21.jpg" alt="crash vaisseau de livraison de pizzas"></p>
  <p>Oupss, une erreur est survenue, impossible de trouver votre page</p>
