--- a/404.html
+++ b/404.html
@@ -17,7 +17,7 @@
  <h1>Erreur 404</h1>
  <p><img src="app/Public/front/img/crash21.jpg" alt="crash vaisseau de livraison de pizzas"></p>
  <p>Oupss, une erreur est survenue, impossible de trouver votre page</p>
- <p><a href="index.php">retour à la page d'acceuil</a></p>
+ <p><a href="index.php" aria-label="retour page d'accueil">retour à la page d'acceuil</a></p>
 </body>
 
 </html>
